--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -402,14 +402,14 @@ button:hover{ cursor: pointer; }
 }
 
 .Button-sponsor{
-  background-color: #F07167;
+  background-color: #c44c1c;
   -webkit-box-shadow:inset 0 1px 0 #F07167, 0 10px 0 #441305;
   border-color: #712020;
 }
 
 .Button-sponsor:hover{
   top:10px;
-  background-color: #af4445;
+  background-color: #441305;
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
@@ -629,7 +629,7 @@ figcaption a {
 }
 
 .Button-sponsor-page{
-  background-color: #ff8178;
+  background-color: #c44c1c;
   padding: 1rem 1rem;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   text-shadow: 0px 1px 0px #000;
@@ -654,7 +654,7 @@ figcaption a {
 
 .Button-sponsor-page:hover{
   top:10px;
-  background-color: rgb(255, 129, 120);
+  background-color: #441305;
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
@@ -727,10 +727,11 @@ figcaption a {
   padding-bottom: 0%;
 
   .faq-collapse-container {
+    
     font-size: 1.25rem;
     font-weight: 550;
     border: none;
-    background: #98d1cb;
+    background-color: rgba(153, 210, 246, 0.6);
     /* font-weight: bold; */
     font-family: bitter;
     margin-bottom: 2rem;
