--- a/front-end/src/App-mobile.css
+++ b/front-end/src/App-mobile.css
@@ -111,11 +111,11 @@
   }
 
   .Home {
-    background-color: white; 
+    /* background-color: white; 
     padding: 1rem 2rem;
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    margin: 3% 5% 3%;
+    margin: 3% 5% 3%; */
 
     .home-buttons {
 
